--- a/web-example/desert/index.html
+++ b/web-example/desert/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/png" href="/favicon.png" />
-        <title>Base Example</title>
+        <title>Beach Example</title>
     </head>
 
     <body>
-        <script type="module" src="/src/main.ts"></script>
+        <script type="module" src="/src/desert.ts"></script>
     </body>
 </html>
